# librdkafka-test

./: Cargo.toml  README.md  main.rs
src/: main.rs
