[package]
name = "rdkafka_test"
version = "0.1.0"
authors = ["sebcrozet <sebastien.crozet@aerys.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.21", git = "https://github.com/fede1024/rust-rdkafka.git" }
futures = "0.1"
